  * contrib improvement: implement SB-POSIX:MKSTEMP (Yannick Gingras)
  * optimization: there's now a fast-path for fixnum arguments in the
    generic subtraction routines on x86/x86-64. (Thanks to Lutz Euler)
  * optimization: the code generated on x86-64 is more compact thanks
    to not outputting unneccessary prefix bytes. (Thanks to Lutz Euler)
  * bug fix: floating-point exception handling now works on x86-64. 
    (Thanks to James Knight)
  * fixed some bugs revealed by Paul Dietz' test suite:
    ** the type-error signalled from WARN has a filled-in DATUM slot.
    ** the type-error required when a stream is not associated with
       a file has the stream as its datum.
    ** type-errors on single-floats on x86-64 no longer have 
       :INVALID-OBJECT as the datum
    ** the type-errors signalled for invalid function names now have
       a correct expected type
    ** (SETF (DOCUMENTATION ... 'STRUCTURE)) no longer signals an error
       for structures defined with a :TYPE. Documentation strings for
       typed structures are no longer immediately discarded
    ** FILE-STRING-LENGTH and STREAM-EXTERNAL-FORMAT now work on 
       broadcast streams and synonym streams. FILE-LENGTH now also works
       on broadcast streams.

changes in sbcl-0.9.0 relative to sbcl-0.8.21:
  * incompatible change: the --noprogrammer option, deprecated since
    version 0.7.5, has been removed.  Please use the equivalent
    --disable-debugger option instead.
  * incompatible change: finalizers and *AFTER-GC-HOOKS* are now run with
    interrupts enabled.
  * incompatible change: support for *BEFORE-GC-HOOKS* (that have been
    inoperational for a while now) has been completely removed.
  * null lexical environments are now printed as #<NULL-LEXENV>, 
    significantly reducing the amount of clutter in typical backtraces.
  * documentation on weak pointers, finalization, and after GC hooks
    has been added to the manual.